补充vm参数