@@ -7,6 +7,7 @@ package org.wq.jvm.day04;
 
 /**
  * 内存回收策略-对象优先在Eden分配
+ * VM参数: -XX:+UseParallelOldGC -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
  */
 public class TestAllocation_01 {
     private static final int _1MB = 1024 * 1024;
